修改成符合Hexo格式

--- a/Android Project Guidelines/2.Code Guidelines.md
+++ b/Android Project Guidelines/2.Code Guidelines.md
@@ -1,3 +1,7 @@
+---
+title: Gradle样式（Android指南二）
+tag: 代码指南
+---
 ## 2. 代码规范
 
 ### 2.1 Java语言规范
@@ -289,18 +293,18 @@ class SomeClass
 {
 	private void someFunction()
 	{
-    	if (isSomething)
-    	{
+		if (isSomething)
+		{
 
-    	}
-    	else if (!isSomethingElse)
-    	{
+		}
+		else if (!isSomethingElse)
+		{
 
-    	}
-    	else
-    	{
+		}
+		else
+		{
 
-    	}
+		}
 	}
 }
 ```
@@ -310,13 +314,13 @@ class SomeClass
 ```java
 class SomeClass {
 	private void someFunction() {
-    	if (isSomething) {
+		if (isSomething) {
 
-    	} else if (!isSomethingElse) {
+		} else if (!isSomethingElse) {
 
-    	} else {
+		} else {
 
-    	}
+		}
 	}
 }
 ```
@@ -394,7 +398,6 @@ Android代码风格：
 **@SuppressWarnings:** @SuppressWarnings 注释应该只在它是不出现警告的情况下使用。如果警告你确定它不是问题，就应该使用@SuppressWarning。所以确保所有警告的代码没有问题。
 
 
-----------
 
 注释尽可能多。比如，当你一个属性可能是空时可以用@Nullable注释，例子：
 ```java
