--- a/Android Project Guidelines/3.Gradle Style.md
+++ b/Android Project Guidelines/3.Gradle Style.md
@@ -1,9 +1,10 @@
 ---
 title: Gradle样式（Android指南三）
 tag:
-    - 代码指南
+  - 代码指南
 ---
-# 3. Gradle样式
+
+# 3\. Gradle样式
 
 ## 3.1 依赖
 
@@ -21,12 +22,12 @@ compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
 compile "com.android.support:percent:$SUPPORT_LIBRARY_VERSION"
 compile "com.android.support:customtabs:$SUPPORT_LIBRARY_VERSION"
 ```
+
 未来只需要更改一个变量值就更改多个依赖的版本，这样是非常方便的。
 
 ### 3.1.2 依赖的分组
 
 有时，我们需要根据包名把依赖进行分组，组与组之间用空行隔开，比如：
-
 
 ```java
 compile "com.android.support:percent:$SUPPORT_LIBRARY_VERSION"
@@ -42,6 +43,7 @@ compile 'com.github.bumptech.glide:glide:3.7.0'
 ```
 
 `compile`、`testCompile`和`androidTestCompile` 依赖应该分到它们相应的组，比如：
+
 ```java
 // App Dependencies
 compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
@@ -53,8 +55,8 @@ androidTestCompile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VER
 // Unit tests dependencies
 testCompile 'org.robolectric:robolectric:3.0'
 ```
-这两种方法使得寻找依赖变得容易，也使得依赖变得干净和整洁🙌
 
+这两种方法使得寻找依赖变得容易，也使得依赖变得干净和整洁🙌
 
 ### 3.1.3 单独的依赖
 
