--- a/Linux/文件恢复.md
+++ b/Linux/文件恢复.md
@@ -3,6 +3,7 @@ title: Linux下的文件恢复
 date: 2017/3/29
 tag:
   - Linux
+urlname: Linux-file-recovery
 ---
 
 最近购买了一个平板二合一的电脑，平时出门带上用于码字，由于预算的不足，不能购买高性能的设备，只能购买了一个Intel Atom X5 z8350的寨板。在开始使用后，发现由于羸弱的性能，我平时主要的编辑器[Atom](https://atom.io)不能流畅的运行。当然这不全是性能弱的锅，Atom也存在优化不足的原因，在我的i7+SSD的主力机下，当文件太大时就会有明显的卡顿。所以在平板上就不能使用Atom了，转而使用微软开发的[Visual Studio Code](https://code.visualstudio.com/)。
