--- a/Android Project Guidelines/3.Gradle Style.md
+++ b/Android Project Guidelines/3.Gradle Style.md
@@ -3,7 +3,7 @@ title: Gradle样式（Android指南三）
 date: 2016/9/9
 tag:
   - 代码指南
-urlname: Android-guide-1
+urlname: android-guide-3
 ---
 
 # 3\. Gradle样式
