--- a/Linux/文件恢复.md
+++ b/Linux/文件恢复.md
@@ -3,7 +3,7 @@ title: Linux下的文件恢复
 date: 2017/3/29
 tag:
   - Linux
-urlname: Linux-file-recovery
+urlname: linux-file-recovery
 desc: Linux file recovery
 ---
 
